--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.10",
+    "@clerk/themes": "^1.7.11",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@types/web-push": "^3.6.3",
+    "eslint-config-prettier": "^9.1.0",
+    "lucide-react": "^0.364.0",
+    "next": "14.1.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-icons": "^5.0.1",
+    "stream-chat": "^8.25.1",
+    "stream-chat-react": "^11.13.1",
+    "svix": "^1.21.0",
+    "tailwind-merge": "^2.2.2",
+    "web-push": "^3.6.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
